v0.71.0 — instance clone/notes/mod profiles, server browser, modpack installer, dep resolver, Java auto-install all platforms, config GUI, auto-backup on launch, README rewrite